# ensdam

./: .gitignore  CMakeLists.txt  INSTALL.txt  LICENSE.txt  README.md  compile.bash  compile.sh
doc/: Makefile  README.md  ensanam.tex  ensaugm.tex  ensscores.tex  ensstat.tex  interptools.tex  stochtools.tex  transpho.tex
doc/Figures/: ensanam_discrete_event.fig  ensscores_crps.fig
examples/: Makefile  README.md  mcmc_ensemble_update_obs100err20loc06x4.h90  observation_regression_on_the_sphere.f90  scores_idealized_example.F90  scores_idealized_example.f90  scores_idealized_example.py
examples/fortran/: CMakeLists.txt  Makefile  README.md  low_pass_filter_on_the_sphere.f90  mcmc_ensemble_update.F90  mcmc_ensemble_update_obs100err20loc06.h90  mcmc_ensemble_update_obs100err20loc06x2.h90  mcmc_ensemble_update_parameters.h90  random_field_on_the_sphere.f90
examples/julia/: README.md  example_probability.jl  example_random.jl  example_scores.jl
examples/python/: README.md  anamorphosis_example.nc  example_anamorphosis.py  example_augment.py  example_augment_mpi.py  example_interpolation.py  example_obserror.py  example_probability.py  example_random.py  example_scores.py  example_statistics.py  example_transpho.py  example_update_mpi.py  make_README.bash  print_doc_anamorphosis.py  print_doc_augment.py  print_doc_interpolation.py  print_doc_obserror.py  print_doc_probability.py  print_doc_random.py  print_doc_scores.py  print_doc_statistics.py  print_doc_transpho.py  print_doc_update.py  scores_idealized_example.py  scores_idealized_example_simplified.py
julia/: README.md  ensdam.jl  first_test.jl  install.bash  probability.jl  scores.jl
macro/: make.ada_ifort  make.cal1_ifort  make.jean-zay_ifort  make.jupyter  make.linux_ifort
python/: CMakeLists.txt  Makefile  Makefile.macro  README.md  pyproject.toml  setup.py  setup_mpi.py
python/modules/: ensdam.py
python/pyensdam/: __init__.py  __main__.py
python/pyensdam_mpi/: __init__.py  __main__.py
python/signatures/: anatra.pyf  propose_pyf.bash  spharea.pyf
python/signatures/With_MPI/: anautil.pyf  schurprod.pyf  score_crps.pyf  score_rcrv.pyf  stoanam.pyf  storfg.pyf  stoutil.pyf
python/signatures/Without_MPI/: anaqua.pyf  ensaugm.pyf  interp.pyf  meanstd.pyf  score_crps.pyf  score_ranks.pyf  sphylm.pyf  stogprod.pyf  storfg.pyf  storng.pyf
python/src/: CMakeLists.txt  anamorphosis.pyx  augment.pyx  ensanam_wrapper.F90  ensaugm_wrapper.F90  ensscores_wrapper.F90  ensstat_wrapper.F90  ensupdate_wrapper.F90  interp_wrapper.F90  interpolation.pyx  obserror.pyx  obserror_wrapper.F90  probability.pyx  random.pyx  scores.pyx  statistics.pyx  stochtools_wrapper.F90  transpho.pyx  transpho_wrapper.F90  update.pyx
python/wrappers/Without_MPI/: anaqua-f2pywrappers2.f90  storfg-f2pywrappers2.f90
python_f2py/: Makefile  README.md
python_f2py/modules/: ensdam.py
python_f2py/signatures/: propose_pyf.bash
python_f2py/signatures/With_MPI/: anaobs.pyf  anaqua.pyf  covariance.pyf  ensaugm.pyf  meanstd.pyf  obserror.pyf  score_entropy.pyf  score_optimality.pyf  sphylm.pyf
python_f2py/signatures/Without_MPI/: anaqua.pyf  covariance.pyf  score_entropy.pyf  score_optimality.pyf  score_rcrv.pyf  stotge.pyf
python_f2py/wrappers/: ensdam_f2py-f2pywrappers2.f90  storfg-f2pywrappers2.f90
python_f2py/wrappers/Without_MPI/: score_optimality-f2pywrappers2.f90
src/: CMakeLists.txt
src/EnsAnam/: anaobs.f90  anaqua.f90  anatra.f90  anautil.f90
src/EnsAugm/: ensaugm.F90  schurprod.f90
src/EnsScores/: score_crps.F90  score_entropy.F90  score_optimality.F90  score_ranks.F90  score_rcrv.F90
src/EnsStat/: covariance.F90  meanstd.F90
src/EnsUpdate/: mcmc_update.F90  mcmc_update_obs.F90
src/InterpTools/: interp.f90  unmask.f90
src/ObsError/: obserror.F90
src/StochTools/: .storng.f90.swp  constant.f90  qxgs.f90  stoanam.f90  stogprod.f90  storfg.F90  storng.f90  stotge.f90  stoutil.F90  stoutil.f90
src/TranSpHO/: spharea.f90  sphylm.F90
tools/: Makefile  Makefile.template  README.md  install.bash  install_gpu.bash  install_mpi.bash
tools/macro/: make.adastra_genoa  make.adastra_gpu  make.cal1_gfortran  make.cal1_ifort  make.jean-zay_gpu  make.jean-zay_ifort
